[package]
name = "tokio-rustls-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24.1"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "2.0"
rcgen = "0.12"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
humantime = "2.1"
humansize = "2.1"
